--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^15.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.7.4"
+    "babel-core": "^6.7.4",
+    "eslint-plugin-react": "^4.3.0"
   }
 }
