--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "babel-loader": "^6.2.4",
     "events": "^1.1.0",
     "flux": "^2.1.1",
-    "react": "^0.14.8",
-    "react-dom": "^15.0.1"
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-router": "^1.0.0-beta3"
   },
   "devDependencies": {
     "babel-core": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "eslint-plugin-react": "^4.3.0"
   }
 }
